VAL-424 Address sonar feedback